making Eclipse documents

--- a/web/ja/manual/topic/friends/eclipse/coding/templates.html
+++ b/web/ja/manual/topic/friends/eclipse/coding/templates.html
@@ -26,6 +26,7 @@
 <div id="content"><!-- __content-start__ -->
 	<h1>Eclipseエディターテンプレート</h1>
 	<div class="relatedpage"><a href="./index.html">Friends - Eclipse</a></div>
+	<div class="relatedpage"><a href="./environment/recomwork.html">Eclipseのおすすめワークスペース設定</a></div>
 	${indexlist}
 
 	<h2 id="about">エディターテンプレートとは？</h2>
@@ -83,7 +84,7 @@ String sea = ...
 	<h2 id="settings">エディターテンプレートの設定</h2>
 	<h3 id="preferences">Preferences の Templates画面</h3>
 	<p>
-		メニューの Preferences の Java - Editor - Templates で設定できます。
+		メニューの Preferences の <em class="keyword">Java - Editor - Templates</em> で設定できます。
 	</p>
 	<p class="imgbox">
 		<a href="../../../../../data/model/friends/eclipse/coding/friends-Eclipse-EditorTemplates-settings-example.png" title="Eclipse EditorTemplates Settings Example"><img src="../../../../../data/model/friends/eclipse/coding/friends-Eclipse-EditorTemplates-settings-example.png" alt="Eclipse EditorTemplates Settings Example" width="550" height="350" /></a>
@@ -123,7 +124,7 @@ String sea = ...
 	</p>
 	<h3 id="importwholeway">まるごと入れ替え方式のやり方</h3>
 	<p>
-		まず、メニューの Preferences の Java - Editor - Templates で設定画面を開きます。
+		まず、メニューの Preferences の <em class="keyword">Java - Editor - Templates</em> で設定画面を開きます。
 	</p>
 	<p class="imgbox">
 		<a href="../../../../../data/model/friends/eclipse/coding/friends-Eclipse-EditorTemplates-settings-example.png" title="Eclipse EditorTemplates Settings Example"><img src="../../../../../data/model/friends/eclipse/coding/friends-Eclipse-EditorTemplates-settings-example.png" alt="Eclipse EditorTemplates Settings Example" width="550" height="350" /></a>
