--- a/web/ja/manual/topic/friends/eclipse/coding/typefilters.html
+++ b/web/ja/manual/topic/friends/eclipse/coding/typefilters.html
@@ -26,6 +26,7 @@
 <div id="content"><!-- __content-start__ -->
 	<h1>Eclipseのノイズ減らし Type Filters</h1>
 	<div class="relatedpage"><a href="./index.html">Friends - Eclipse</a></div>
+	<div class="relatedpage"><a href="./environment/recomwork.html">Eclipseのおすすめワークスペース設定</a></div>
 	${indexlist}
 
 	<h2 id="about">Type Filtersとは？</h2>
