--- a/web/ja/manual/topic/friends/eclipse/environment/workproj.html
+++ b/web/ja/manual/topic/friends/eclipse/environment/workproj.html
@@ -65,19 +65,9 @@
 	<div class="inucolumn">
 		<h2 id="recommendedwork">オススメのワークスペース設定</h2>
 		<p>
-			jfluteオススメの「新しいワークスペースを作ったらやっておこう設定」を紹介します。
+			jfluteオススメの <em class="keyword">新しいワークスペース作ったらやっておこう設定</em> を紹介しています。
 		</p>
-		<dl class="keymainlist">
-			<dt><a href="../coding/editorbgcolor.html">Editorの背景色</a></dt><dd>Background Color を気持ちの良い色にする <span class="frm">(好み次第)</span></dd>
-			<dt><a href="../coding/templates.html">エディターテンプレート</a></dt><dd>DBFluteの補完テンプレートを入れる</dd>
-			<dt><a href="../coding/typefilters.html">Type Filters</a></dt><dd>お決まりの除外クラスたちを設定する</dd>
-			<dt><a href="../operation/closetfile.html">隠しファイルの設定</a></dt><dd>.(ドット)始まりのファイルの表示 <span class="frm">(.settingsなどは意識したいので)</span></dd>
-			<dt><a href="../operation/pkgpresent.html">パッケージ見た目表現</a></dt><dd>デフォルトのフラットから階層構造へ <span class="frm">(好み次第)</span></dd>
-			<dt><a href="../operation/filetextsearch.html">ファイル/テキスト検索</a></dt><dd>ファイル検索はFile Searchだけ、テキスト検索はincrementalに</dd>
-			<dt><a href="../operation/toolbar.html">ツールバー</a></dt><dd>Tool Bar Visibility にて、Launch 以外はチェックを外す</dd>
-			<dt><a href="../operation/console.html">コンソール</a></dt><dd>コンソールのバッファサイズを80万くらいに</dd>
-			<dt><a href="../operation/viewlocation.html">ビューの配置</a></dt><dd>できるだけfast viewにして、コードの縦表示を長く</dd>
-		</dl>
+		<div class="detailpage"><a href="./recomwork.html">Eclipseのおすすめワークスペース設定</a></div>
 	</div>
 
 	<div class="inucolumn">
@@ -86,6 +76,7 @@
 			jfluteオススメの「新しいプロジェクトを作ったらやっておいた方が良い設定」を紹介します。
 		</p>
 		<p>
+			TODO jflute
 			<span class="frm">※最初の一人がやって.settingsをgitで共有すれば、後の人はやらなくて良いです</span>
 		</p>
 		<dl class="keymainlist">
