--- a/web/ja/manual/topic/friends/eclipse/operation/findreplace.html
+++ b/web/ja/manual/topic/friends/eclipse/operation/findreplace.html
@@ -33,16 +33,23 @@
 	<p>
 		開いてるファイルで、(Macなら) command+F をすると、ファイル内のテキスト検索・置換ができるダイアログが表示されます。
 	</p>
+	<p class="imgbox">
+		<a href="../../../../../data/model/friends/eclipse/operation/friends-Eclipse-FindReplace-example-finding.png" title="Eclipse FindReplace example finding"><img src="../../../../../data/model/friends/eclipse/operation/friends-Eclipse-FindReplace-example-finding.png" alt="Eclipse FindReplace example finding" width="520" height="280" /></a>
+	</p>
 	<p>
 		ダイアログを開かないタイプのテキスト検索 command+J に比べて、ダイアログが出てくる分ちょっと手間がありますが、細かい制御ができます。
 	</p>
 	<p>
-		ここでのオプションはワークスペースの設定なので、ワークスペースを作るたびに設定し直す必要があります。
+		ここでのオプションはワークスペース設定なので、ワークスペースを作るたびに設定し直す必要があります。
+		また、直近のオプションが記憶されるようになっています。
 	</p>
 
 	<h2 id="casesensitive">大文字小文字を区別、Case sensitiveに</h2>
 	<p>
 		ダイアログで Case sensitive にチェックを付けると、大文字小文字を区別するようになります。
+	</p>
+	<p class="imgbox">
+		<a href="../../../../../data/model/friends/eclipse/operation/friends-Eclipse-FindReplace-settings-casesensitive.png" title="Eclipse FindReplace settings case-sensitive"><img src="../../../../../data/model/friends/eclipse/operation/friends-Eclipse-FindReplace-settings-casesensitive.png" alt="Eclipse FindReplace settings case-sensitive" width="520" height="280" /></a>
 	</p>
 	<p>
 		Javaなど大文字小文字を区別するプログラミング言語では、意識して検索したい場面も多いのでチェックを付けておくとノイズが減ります。
@@ -51,7 +58,10 @@
 
 	<h2 id="incremental">入力しながら検索、Incrementalに</h2>
 	<p>
-		ダイアログで Incremental にチェックを付けると、検索文字列を入力しながら検索されるようになります。
+		ダイアログで Incremental にチェックを付けると、入力しながら検索されるようになります。
+	</p>
+	<p class="imgbox">
+		<a href="../../../../../data/model/friends/eclipse/operation/friends-Eclipse-FindReplace-settings-incremental.png" title="Eclipse FindReplace settings incremental"><img src="../../../../../data/model/friends/eclipse/operation/friends-Eclipse-FindReplace-settings-incremental.png" alt="Eclipse FindReplace settings incremental" width="520" height="280" /></a>
 	</p>
 	<p>
 		検索文字列を打ち切らずに見つけることもできますし、途中の打ち間違いとかにも気付きやすいです。
