--- a/web/ja/manual/topic/friends/eclipse/operation/pkgpresent.html
+++ b/web/ja/manual/topic/friends/eclipse/operation/pkgpresent.html
@@ -31,7 +31,7 @@
 
 	<h2 id="about">パッケージ見た目表現とは？</h2>
 	<p>
-		Eclipse の Package Explorer上では、パッケージの表示形式 (Package Presentation) が複数あります。
+		Eclipse の Package Explorer上では、Javaパッケージの表示形式 (Package Presentation) が複数あります。
 	</p>
 	<h3 id="flat">フラット <span class="frm">(デフォルト)</span></h3>
 	<p class="imgbox">
@@ -48,7 +48,7 @@
 
 	<h2 id="behierarchical">階層構造に変更する</h2>
 	<p>
-		階層構造に変更する場合は、Package Explorerの右上の「白下三角」のマークをクリックしてメニューを出して...
+		階層構造に変更する場合は、Package Explorerの右上の「白下三角」のマークをクリックしてメニュー (View Menu) を出して...
 		<span class="frm">(Eclipseのバージョンによっては、マークが縦の点点点になっているかもです)</span>
 	</p>
 	<p>
@@ -61,7 +61,7 @@
 		すると、パッケージ見た目表現が、階層構造になります。
 	</p>
 	<p class="imgbox">
-		<a href="../../../../../data/model/friends/eclipse/operation/friends-Eclipse-PackagePresentation-example-hierarchical.png" title="Eclipse PackagePresentation example hierarchical"><img src="../../../../../data/model/friends/eclipse/operation/friends-Eclipse-PackagePresentation-example-hierarchical.png" alt="Eclipse PackagePresentation example hierarchical" width="520" height="280" /></a>
+		<a href="../../../../../data/model/friends/eclipse/operation/friends-Eclipse-PackagePresentation-flat-to-hierarchical.png" title="Eclipse PackagePresentation flat to hierarchical"><img src="../../../../../data/model/friends/eclipse/operation/friends-Eclipse-PackagePresentation-flat-to-hierarchical.png" alt="Eclipse PackagePresentation flat to hierarchical" width="520" height="280" /></a>
 	</p>
 <!-- __content-end__ --></div></div>
 
