first finish making Eclipse documents

--- a/web/ja/manual/topic/friends/eclipse/coding/templates.html
+++ b/web/ja/manual/topic/friends/eclipse/coding/templates.html
@@ -116,11 +116,7 @@ String sea = ...
 		Import対象のxmlに (標準テンプレートも含めて) 全てまるごと保存されている場合はこの方式で。
 	</p>
 	<p>
-		<span class="frm">
-		※まるごと入れ替え方式向けのDBFluteの補完テンプレートxmlは、こちらからダウンロードできます:<br>
-		(LastaFluteプロジェクトにあるものと同じものですが、こちらは常に最新版です)<br>
-		</span>
-		<a href="http://dbflute.seasar.org/download/misc/settings/whole-eclipse-editor-templates.zip">whole-eclipse-editor-templates.zip</a>
+		<span class="frm">※LastaFluteプロジェクトやDBFluteハンズオンなどでは、基本的にまるごと入れ替え方式を前提にしています。</span>
 	</p>
 	<h3 id="importwholeway">まるごと入れ替え方式のやり方</h3>
 	<p>
@@ -149,12 +145,6 @@ String sea = ...
 	<h2 id="importfromdefault">Importのデフォルト付け足し方式</h2>
 	<p>
 		Import対象のxmlには標準テンプレートは含まれず一部のテンプレートのみが保存されている場合はこの方式で。
-	</p>
-	<p>
-		<span class="frm">
-		※デフォルト付け足し方式向けのDBFluteの補完テンプレートxmlは、こちらからダウンロードできます:<br>
-		</span>
-		<a href="http://dbflute.seasar.org/download/misc/settings/dbflute-eclipse-editor-templates.zip">dbflute-eclipse-editor-templates.zip</a>
 	</p>
 	<h3 id="importfromdefaultway">デフォルト付け足し方式のやり方</h3>
 	<p>
