--- a/web/ja/manual/topic/friends/eclipse/shortcut/operationcut.html
+++ b/web/ja/manual/topic/friends/eclipse/shortcut/operationcut.html
@@ -36,7 +36,7 @@
 	<dl class="textlist">
 		<dt>ワークスペースの設定 (Preferences)</dt>
 		<dd>
-			Macなら command + , (カンマ)
+			Macなら <em class="keyword">command + , (カンマ)</em>
 		</dd>
 		<dt>プロジェクトのプロパティ (Properties)</dt>
 		<dd>プロジェクトを選択して <em class="keyword">alt + enter</em></dd>
